fix: prevent text shift on mode toggle and improve responsive design below 980px

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -55,13 +55,27 @@ body.light {
 }
 
 @media (max-width: 980px) {
+  /*Main*/
+
   #contentOrder {
     flex-direction: column;
+    margin: 50px 0 0 0;
+    height: 724px !important;
   }
 
   #mesa {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px 0 0 0;
+  }
+
+  /*Footer*/
+
+  footer {
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .music-controls{
+    margin: 0;
   }
 }
 
