--- a/src/Styles/Body.css
+++ b/src/Styles/Body.css
@@ -2,9 +2,14 @@
 
 #contentOrder {
   display: flex;
+  width: 100%;
+  height: 590px;
   justify-content: space-around;
   align-items: center;
-  margin-top: 65px;
+}
+
+#contenedor_titulo {
+  background-color: none;
 }
 
 h1 {
