--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -3,7 +3,6 @@ footer {
   display: flex;
   justify-content: start;
   width: 100%;
-  margin: 25px 0 0 0;
   position: relative;
 }
 
